# runtime

./: .CodeQL.yml  .clang-tidy  .dockerignore  .dotnet-runtime-placeholder  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .markdownlint.json  .mlc_config  .travis.yml  .vsconfig  0001-Changes-for-AVX_512_add.patch  0001-Improve-GetStaticFieldSeqAndAddress.patch  0001-data-common-fix-possible-integer-overflow.patch  2024.01.md  AppBaseResolverTests.cs  Axon bank  BooleanAsserts.cs  BranchInfo.props  Build.proj  BuildToolsVersion.txt  Building-and-Running-CoreCLR-on-Linux.md  CMakeLists.txt  CODE-OF-CONDUCT.md  CODE_OWNERS.TXT  CONTRIBUTING.md  Comparers.cs  CompilationLibrary.cs  CompilationOptions.cs  CreateAnExperiment.md  DependencyContext.cs  DependencyContextBuilderTests.cs  DependencyContextCsvReader.cs  DependencyContextCsvReaderTests.cs  DependencyContextExtensions.cs  DependencyContextJsonReader.cs  DependencyContextJsonReaderTest.cs  DependencyContextJsonWriterTests.cs  (+211 more)
cli/: CMakeLists.txt  args.cpp  args.h  breadcrumbs.cpp  clihost.cpp  coreclr.cpp  deps_entry.cpp  deps_entry.h  deps_format.cpp  deps_format.h  deps_resolver.cpp  deps_resolver.h  hostpolicy.cpp  libhost.cpp  libhost.h  runtime_config.cpp  runtime_config.h  servicing_index.cpp  setup.cmake
cli/dll/: CMakeLists.txt
cli/fxr/: fx_muxer.cpp  fx_muxer.h  fx_ver.cpp  hostfxr.cpp
src/: CMakeLists.txt  Directory.Build.props  Directory.Build.targets  NuGet.Config  args.cpp  build.proj  createVersionFile.proj  dir.proj  dir.props  dirs.proj  main.cpp  pal.unix.cpp  pal.windows.cpp  publish.proj  publishwitharcade.proj  servicing_index.cpp  settings.cmake  sign.builds  src.builds  syncAzure.proj  tpafile.cpp  trace.cpp  utils.cpp
src/.nuget/: BuildRyuJitPackage.ps1  Microsoft.DotNet.CoreCLR.Debug.Development.nuspec  Microsoft.DotNet.CoreCLR.Development.nuspec  Microsoft.DotNet.CoreCLR.nuspec  Microsoft.DotNet.RyuJit.nuspec  descriptions.json  dir.props  dir.targets  packages.Unix.config  packages.Windows_NT.config  packages.builds  packaging.props  packaging.targets  runtime.json  toolchain.ubuntu.14.04-x64.Microsoft.DotNet.RyuJit.nuspec  toolchain.win7-x64.Microsoft.DotNet.RyuJit.nuspec
src/ILTransform/: ILRewriter.cs  ILTransform.csproj  Program.cs  TestProject.cs
src/Microsoft.DotNet.PlatformAbstractions/: ApplicationEnvironment.cs  IEnvironment.cs  Microsoft.DotNet.PlatformAbstractions.xproj  RuntimeEnvironment.cs  TemporaryDirectory.cs  project.json
src/Microsoft.Extensions.DependencyModel/: CollectionExtensions.cs  CompilationLibrary.cs  DependencyContext.cs  DependencyContextExtensions.cs  DependencyContextJsonReader.cs  DependencyContextLoader.cs  DependencyContextWriter.cs  Microsoft.Extensions.DependencyModel.xproj  ResourceAssembly.cs  RuntimeFallbacks.cs  RuntimeLibrary.cs  project.json
src/Microsoft.Extensions.PlatformAbstractions/: project.json
src/System.Private.CoreLib/: CreateRuntimeRootILLinkDescriptorFile.targets  GenerateSplitStringResources.targets  ILLinkTrim.xml  System.Private.CoreLib.csproj
src/ToolBox/: dirs.proj
src/binder/: CMakeLists.txt  activitytracker.cpp  applicationcontext.cpp  assembly.cpp  assemblybinder.cpp  assemblyidentitycache.cpp  assemblyname.cpp  binderinterface.cpp  bindinglog.cpp  cdebuglog.cpp  clrprivbinderassemblyloadcontext.cpp  clrprivbindercoreclr.cpp  coreclrbindercommon.cpp  fusionassemblyname.cpp  propertymap.cpp  textualidentityparser.cpp  utils.cpp  variables.cpp
src/classlibnative/: CMakeLists.txt  Dirs.proj
src/clr/: .editorconfig  .gitattributes  .gitignore  BuildToolsVersion.txt  Building-and-Running-CoreCLR-on-Linux.md  CMakeLists.txt  Contribution-guidelines.md  Developer-Guide.md  Directory.Build.props  Directory.Build.targets  EmptyProps.props  Garbage-Collector-Contributions.md  ILAsmVersion.txt  LICENSE.TXT  Linux-instructions.md  Mac-OS-X-instructions.md  OS-X-instructions.md  PATENTS.TXT  Performance.md  README.md  THIRD-PARTY-NOTICES.TXT  Testing-across-repos.md  UpdateDependencies.ps1  UpdatePublishedVersions.ps1  Validating-changes.md  all.locproj  azure-pipelines.yml  build-packages.cmd  build-packages.sh  build-product.cmd  build-test.cmd  build-test.sh  build.cmd  build.proj  build.sh  ci.cmd  clean.cmd  clr.coreclr.props  clr.defines.targets  clr.desktop.props  (+41 more)
src/coreclr/: .travis.yml  BuildToolsVersion.txt  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Contribution-Overview.md  Contribution-guidelines.md  Debugging-instructions.md  Developer-Guide.md  Directory.Build.props  Directory.Build.targets  DotnetCLIVersion.txt  EmptyProps.props  ILAsmVersion.txt  LPTStrTestNative.cpp  Linux-instructions.md  Mac-OS-X-instructions.md  NuGet.Config  OS-X-instructions.md  Performance.md  README.md  THIRD-PARTY-NOTICES  UpdateDependencies.ps1  UpdatePublishedVersions.ps1  Windows-instructions.md  _build-commons.sh  all.locproj  build-packages.cmd  build-packages.sh  build-runtime.cmd  build-runtime.ps1  build-runtime.sh  build-test.cmd  build-test.sh  build.cmd  build.proj  build.sh  clean.cmd  clean.sh  clr.coreclr.props  (+66 more)
src/corefx/: CMakeLists.txt  format-code.sh
src/corehost/: CMakeLists.txt  Directory.Build.props  build.cmd  build.proj  (+4 more)
tests/: CMakeLists.txt  NuGet.config  bringup_runtest.sh  build.proj  buildtest.cmd  dir.props  dir.sdkbuild.props  gcSimulatorTests.txt  helix.targets  helixperftasks.targets  helixprep.proj  helixpublish.proj  helixpublishwitharcade.proj  issues.targets  legacyjit_x86_testenv.cmd  override.targets  publishdependency.targets  runtest.cmd  runtest.proj  runtest.py  runtest.sh  ryujit_x86_no_fallback_issues.targets  setup-debuggertets.cmd  setup-runtime-dependencies.cmd  setup-runtime-dependencies.sh  setup-stress-dependencies.cmd  setup-stress-dependencies.sh  skipCrossGenFiles.arm64.txt  testenvironment.proj  tests.targets  testsFailingOnArm64.txt  testsFailingOutsideWindows.txt  testsUnsupportedOnARM32.txt  testsUnsupportedOutsideWindows.txt  x64_arm64_altjit.cmd  x86_jit32_issues.targets  x86_legacy_backend_issues.targets  xunitwrapper.targets
(+181133 files in other folders)
